feat: add JCC-001-JCC-009, JCC-046-JCC-057 Java Concurrency - batch 1